<resources>
  <string name="app_name">DaggerMimo</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
    <string name="login_username_hint">username</string>
    <string name="login_password_hint">password</string>
    <string name="login_button_text">Login</string>
    <string name="title_activity_movies_list">MoviesListActivity</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>


    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="movie_detail_overview">Overview</string>
    <string name="movie_detail_genre">Genre</string>
    <string name="movie_detail_date">Date</string>
    <string name="movie_detail_votes">Votes</string>
    <string name="movie_detail_rate">Rating</string>
    <string name="movie_detail_genre_default">-</string>
    <string name="movie_detail_watchlist_error">Oops! Could not add movie to watchlist</string>
    <string name="movie_detail_favorite_error">Oops! Could not favorite movie</string>
</resources>
