<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tylos.daggermimo.movie.MovieDetailActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/placeholder" />

    <LinearLayout
        android:id="@+id/action_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="8dip">

        <ImageView
            android:id="@+id/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:src="@drawable/icon_watchlist_selector"
            android:scaleType="center"
            android:background="@drawable/red_placeholder" />

        <ImageView
            android:id="@+id/watchlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dip"
            android:src="@drawable/icon_favorite_selector"
            android:background="@drawable/red_placeholder"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@id/action_buttons"
        android:background="@color/black_80">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@android:color/white"
            android:dividerPadding="1px"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:id="@+id/title"
                android:textColor="@color/white_80"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dip"
                android:singleLine="true"
                android:ellipsize="end"
                android:textAllCaps="true"
                android:layout_marginLeft="16dip"
                android:layout_marginTop="16dip"
                tools:text="Crash"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/white_80"
                android:layout_marginLeft="16dip"
                android:layout_below="@id/title"/>
            
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_margin="16dip">

                <TableRow android:paddingBottom="16dip">

                    <TextView
                        style="@style/text.primary"
                        android:text="@string/movie_detail_overview" />

                    <TextView
                        android:id="@+id/overview"
                        style="@style/text.secondary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Durante el día, Driver (Ryan Gosling) trabaja en un taller y es conductor especialista de cine, pero, algunas noches de forma esporádica..." />
                </TableRow>

                <TableRow android:paddingBottom="16dip">

                    <TextView
                        style="@style/text.primary"
                        android:text="@string/movie_detail_genre" />

                    <TextView
                        android:id="@+id/genre"
                        style="@style/text.secondary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Acción" />
                </TableRow>

                <TableRow android:paddingBottom="16dip">

                    <TextView
                        style="@style/text.primary"
                        android:text="@string/movie_detail_date" />

                    <TextView
                        android:id="@+id/date"
                        style="@style/text.secondary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="17/03/2015" />
                </TableRow>

                <TableRow android:paddingBottom="16dip">

                    <TextView
                        style="@style/text.primary"
                        android:text="@string/movie_detail_rate" />

                    <TextView
                        android:id="@+id/rating"
                        style="@style/text.secondary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="7.0" />
                </TableRow>

                <TableRow android:paddingBottom="16dip">

                    <TextView
                        style="@style/text.primary"
                        android:text="@string/movie_detail_votes" />

                    <TextView
                        android:id="@+id/votes"
                        style="@style/text.secondary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="177" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
